[gd_scene load_steps=4 format=3 uid="uid://c466hearaa038"]

[ext_resource type="Script" uid="uid://3f4ew361rx6h" path="res://UI/Shared/build_info_popup.gd" id="1_3nenx"]
[ext_resource type="StyleBox" uid="uid://dycyqowvsqv73" path="res://Assets/ResourceOverview.tres" id="1_e8w40"]
[ext_resource type="StyleBox" uid="uid://cuvl78w3g4tcr" path="res://Assets/SeparatorLine.tres" id="3_sj0j8"]

[node name="BuildInfoPopup" type="PopupPanel"]
oversampling_override = 1.0
size = Vector2i(208, 114)
visible = true
theme_override_styles/panel = ExtResource("1_e8w40")
script = ExtResource("1_3nenx")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 3.0
offset_top = 3.0
offset_right = 205.0
offset_bottom = 111.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ObjectNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = ExtResource("3_sj0j8")

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = ExtResource("3_sj0j8")

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="PeopleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
